{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 595,
  "lineage": "16910bd2-8ad7-40ea-2e5b-0f796451d730",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mysql_access_from_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2901194037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e39901940d89677",
            "security_group_rule_id": "sgr-0622ad088a68fe4c7",
            "self": false,
            "source_security_group_id": "sg-0b159afc2993bc2f7",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_autoscaling_attachment.app_tg_attachment",
            "module.autoscaling.aws_autoscaling_attachment.asg_attachment",
            "module.autoscaling.aws_autoscaling_group.Wordpress",
            "module.autoscaling.aws_key_pair.app_key",
            "module.autoscaling.aws_launch_template.Wordpress",
            "module.autoscaling.aws_lb.lb_app",
            "module.autoscaling.aws_lb_listener.front_end",
            "module.autoscaling.aws_lb_target_group.cibles",
            "module.autoscaling.aws_security_group.sg_app_lb",
            "module.autoscaling.aws_security_group.wordpress_sg",
            "module.autoscaling.data.template_file.install_wordpress",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "remove_public_access_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2543973521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02e39901940d89677",
            "security_group_rule_id": "sgr-0961e1525889ee24e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_autoscaling_attachment.app_tg_attachment",
            "module.autoscaling.aws_autoscaling_attachment.asg_attachment",
            "module.autoscaling.aws_autoscaling_group.Wordpress",
            "module.autoscaling.aws_key_pair.app_key",
            "module.autoscaling.aws_launch_template.Wordpress",
            "module.autoscaling.aws_lb.lb_app",
            "module.autoscaling.aws_lb_listener.front_end",
            "module.autoscaling.aws_lb_target_group.cibles",
            "module.autoscaling.aws_security_group.sg_app_lb",
            "module.autoscaling.aws_security_group.wordpress_sg",
            "module.autoscaling.data.template_file.install_wordpress",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:loadbalancer/app/load-balancer/e27d2f6266e103ec",
            "arn_suffix": "app/load-balancer/e27d2f6266e103ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-537119002.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:loadbalancer/app/load-balancer/e27d2f6266e103ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04af726042ee38528"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-095d85935ad80f3b8"
              },
              {
                "subnet_id": "subnet-0d01e2054a524b6be"
              }
            ],
            "subnets": [
              "subnet-095d85935ad80f3b8",
              "subnet-0d01e2054a524b6be"
            ],
            "vpc_id": "vpc-07b0334cf7cc17dbd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.autoscaling.aws_security_group.sg_app_lb",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:listener/app/load-balancer/e27d2f6266e103ec/d5bbc602cf5fc448",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:targetgroup/tf-app-lb-tg/73732c71067183d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:listener/app/load-balancer/e27d2f6266e103ec/d5bbc602cf5fc448",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:loadbalancer/app/load-balancer/e27d2f6266e103ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_lb.lb_app",
            "module.autoscaling.aws_lb_target_group.cibles",
            "module.autoscaling.aws_security_group.sg_app_lb",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cibles",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:targetgroup/tf-app-lb-tg/73732c71067183d7",
            "arn_suffix": "targetgroup/tf-app-lb-tg/73732c71067183d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:700778905650:targetgroup/tf-app-lb-tg/73732c71067183d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-app-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:security-group/sg-04af726042ee38528",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04af726042ee38528",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_loadbalancer",
            "name_prefix": "",
            "owner_id": "700778905650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-lb"
            },
            "tags_all": {
              "Name": "SG-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:security-group/sg-0b159afc2993bc2f7",
            "description": "Allow HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b159afc2993bc2f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e39901940d89677"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress_sg",
            "name_prefix": "",
            "owner_id": "700778905650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wordpress-SG"
            },
            "tags_all": {
              "Name": "Wordpress-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac45f3035ff009e",
            "arn": "arn:aws:ec2:eu-west-3:700778905650:instance/i-0eb703eea4729b4e2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb703eea4729b4e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08648e3d5252f74bd",
            "private_dns": "ip-10-0-1-136.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.136",
            "public_dns": "ec2-35-181-4-90.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.4.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e00cf4a9ca5ff896",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d01e2054a524b6be",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ba6f15384837868",
              "sg-02e39901940d89677",
              "sg-0b159afc2993bc2f7"
            ]
          },
          "dependencies": [
            "module.autoscaling.aws_key_pair.app_key",
            "module.autoscaling.aws_security_group.wordpress_sg",
            "module.bastion.aws_security_group.bastion_sg",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:security-group/sg-00ba6f15384837868",
            "description": "Security group for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ba6f15384837868",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "700778905650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liens_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:security-group/sg-0703f5240c996d0ad",
            "description": "SG EC2-RDS",
            "egress": [],
            "id": "sg-0703f5240c996d0ad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e39901940d89677"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b159afc2993bc2f7"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-link",
            "name_prefix": "",
            "owner_id": "700778905650",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.aws_security_group.wordpress_sg",
            "module.rds.aws_db_instance.wordpress_db",
            "module.rds.aws_security_group.rds_sg",
            "module.vpc.aws_db_subnet_group.main",
            "module.vpc.aws_subnet.private_db_subnet",
            "module.vpc.aws_subnet.private_db_subnet2",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:security-group/sg-02e39901940d89677",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e39901940d89677",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "700778905650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d2938f4be9a4b91",
            "arn": "arn:aws:ec2:eu-west-3:700778905650:elastic-ip/eipalloc-02d2938f4be9a4b91",
            "domain": "vpc",
            "id": "eipalloc-02d2938f4be9a4b91",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-39-7-237.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.7.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9926b73682a2a6",
            "arn": "arn:aws:ec2:eu-west-3:700778905650:elastic-ip/eipalloc-0ef9926b73682a2a6",
            "domain": "vpc",
            "id": "eipalloc-0ef9926b73682a2a6",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-226-192.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.226.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:internet-gateway/igw-0594706bf24691b55",
            "id": "igw-0594706bf24691b55",
            "owner_id": "700778905650",
            "tags": {
              "Name": "app-gateway"
            },
            "tags_all": {
              "Name": "app-gateway"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d2938f4be9a4b91",
            "association_id": "eipassoc-0c96ba7a253efb303",
            "connectivity_type": "public",
            "id": "nat-064adc6906e51f06d",
            "network_interface_id": "eni-0d9ecc421dbc77910",
            "private_ip": "10.0.1.227",
            "public_ip": "13.39.7.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d01e2054a524b6be",
            "tags": {
              "Name": "app_ngw_a"
            },
            "tags_all": {
              "Name": "app_ngw_a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_public_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9926b73682a2a6",
            "association_id": "eipassoc-02705b908c62482c2",
            "connectivity_type": "public",
            "id": "nat-0b76b850dd7404f6d",
            "network_interface_id": "eni-07b2c2fe9d980e8be",
            "private_ip": "10.0.2.11",
            "public_ip": "15.188.226.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-095d85935ad80f3b8",
            "tags": {
              "Name": "app_ngw_b"
            },
            "tags_all": {
              "Name": "app_ngw_b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_public_b",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:network-acl/acl-00079099a7efaebf6",
            "egress": [],
            "id": "acl-00079099a7efaebf6",
            "ingress": [],
            "owner_id": "700778905650",
            "subnet_ids": [],
            "tags": {
              "Name": "ACL-app"
            },
            "tags_all": {
              "Name": "ACL-app"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_publicb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:network-acl/acl-0f6a48d03a9459956",
            "egress": [],
            "id": "acl-0f6a48d03a9459956",
            "ingress": [],
            "owner_id": "700778905650",
            "subnet_ids": [],
            "tags": {
              "Name": "ACL-app2"
            },
            "tags_all": {
              "Name": "ACL-app2"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inbounda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1533163834",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00079099a7efaebf6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.nacl_publica",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inboundb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2437825718",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f6a48d03a9459956",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.nacl_publicb",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:route-table/rtb-0d320e22c7c51eb42",
            "id": "rtb-0d320e22c7c51eb42",
            "owner_id": "700778905650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-064adc6906e51f06d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-routetable"
            },
            "tags_all": {
              "Name": "private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_public_a",
            "module.vpc.aws_nat_gateway.gw_pub_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:route-table/rtb-0cdf4870bc4e3e95d",
            "id": "rtb-0cdf4870bc4e3e95d",
            "owner_id": "700778905650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b76b850dd7404f6d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-routetable"
            },
            "tags_all": {
              "Name": "private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_public_b",
            "module.vpc.aws_nat_gateway.gw_pub_b",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:route-table/rtb-08d283cf9e01418f3",
            "id": "rtb-08d283cf9e01418f3",
            "owner_id": "700778905650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-064adc6906e51f06d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-db-rtb"
            },
            "tags_all": {
              "Name": "private-db-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_public_a",
            "module.vpc.aws_nat_gateway.gw_pub_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:route-table/rtb-0eff9f02a93f41a71",
            "id": "rtb-0eff9f02a93f41a71",
            "owner_id": "700778905650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0594706bf24691b55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-public-rtb"
            },
            "tags_all": {
              "Name": "app-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_igw",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e50593dabd237942",
            "route_table_id": "rtb-0d320e22c7c51eb42",
            "subnet_id": "subnet-091fdc61c23424816"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_public_a",
            "module.vpc.aws_nat_gateway.gw_pub_a",
            "module.vpc.aws_route_table.private-a",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fb035b7f3e73483",
            "route_table_id": "rtb-0cdf4870bc4e3e95d",
            "subnet_id": "subnet-03e9afe7f6411a077"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_public_b",
            "module.vpc.aws_nat_gateway.gw_pub_b",
            "module.vpc.aws_route_table.private-b",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnetass_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00765925a8264cdcd",
            "route_table_id": "rtb-0eff9f02a93f41a71",
            "subnet_id": "subnet-0d01e2054a524b6be"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_igw",
            "module.vpc.aws_route_table.rtb_public",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnetass_pubb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6370cb27290655e",
            "route_table_id": "rtb-0eff9f02a93f41a71",
            "subnet_id": "subnet-095d85935ad80f3b8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.app_igw",
            "module.vpc.aws_route_table.rtb_public",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:security-group/sg-0099d5419bf12b17d",
            "description": "Allow NFS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0099d5419bf12b17d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-access",
            "name_prefix": "",
            "owner_id": "700778905650",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:subnet/subnet-0ac58d99a1781a08a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac58d99a1781a08a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700778905650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:subnet/subnet-02b29de846f5e6cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b29de846f5e6cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700778905650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:subnet/subnet-091fdc61c23424816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091fdc61c23424816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700778905650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-a"
            },
            "tags_all": {
              "Name": "app-a"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:subnet/subnet-03e9afe7f6411a077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e9afe7f6411a077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700778905650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-b"
            },
            "tags_all": {
              "Name": "app-b"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:subnet/subnet-0d01e2054a524b6be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d01e2054a524b6be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700778905650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:subnet/subnet-095d85935ad80f3b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095d85935ad80f3b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700778905650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-07b0334cf7cc17dbd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.app_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:700778905650:vpc/vpc-07b0334cf7cc17dbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b325b1b5dd4bc0be",
            "default_route_table_id": "rtb-01cd0ee15d6a0715b",
            "default_security_group_id": "sg-02bb70247f3f7c9b9",
            "dhcp_options_id": "dopt-0c88844a4b03f2009",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b0334cf7cc17dbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01cd0ee15d6a0715b",
            "owner_id": "700778905650",
            "tags": {
              "Name": "wordpress-vpc"
            },
            "tags_all": {
              "Name": "wordpress-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}